# lethalai

./: 3  CMakeLists.txt  Python Frontend.ipynb  README.md  build.sh  compile_commands.json  injector.py  injector.py.bak  lethalai.cpp  lethalai.def  lethalai.h  test.py
.ipynb_checkpoints/: Python Frontend-checkpoint.ipynb
cheat_engine/: addresses.txt  begin.CEA  code.CEA  edi.scandata  edi.scandata.addresslist  edi2.scandata  edi2.scandata.addresslist  edi3.scandata  edi3.scandata.addresslist  idk.PTR  idk.PTR.results.0  idk.PTR.results.1  idk.PTR.results.2  idk.PTR.results.3  lethalleague.CT  refcount.scandata  refcount.scandata.addresslist  refcount2.scandata  refcount2.scandata.addresslist  stage.scandata  stage.scandata.addresslist  stage2.scandata  stage3.scandata  startgame.CEA  titlestate.scandata  titlestate.scandata.addresslist  titlestate2.scandata  titlestate2.scandata.addresslist  versusbutton.CEA
environment/: CMakeLists.txt  EventObserver.vcxproj  EventObserver.vcxproj.filters  GameState.vcxproj  GameState.vcxproj.filters  InputHandler.vcxproj  InputHandler.vcxproj.filters  StateObserver.vcxproj  StateObserver.vcxproj.filters  cmake_install.cmake  event_observer.cpp  event_observer.h  game_state.cpp  game_state.h  input_handler.cpp  input_handler.h  state_observer.cpp  state_observer.h
environment/events/: BuntEvent.vcxproj  BuntEvent.vcxproj.filters  CMakeLists.txt  DeathEvent.vcxproj  DeathEvent.vcxproj.filters  Event.vcxproj  Event.vcxproj.filters  HitEvent.vcxproj  HitEvent.vcxproj.filters  bunt_event.cpp  bunt_event.h  cmake_install.cmake  death_event.cpp  death_event.h  event.cpp  event.h  hit_event.cpp  hit_event.h
environment/game_model/: Ball.vcxproj  Ball.vcxproj.filters  CMakeLists.txt  Player.vcxproj  Player.vcxproj.filters  ball.cpp  ball.h  cmake_install.cmake  player.cpp  player.h
graphics/: CMakeLists.txt  Drawable.vcxproj  Drawable.vcxproj.filters  GraphicsHandler.vcxproj  GraphicsHandler.vcxproj.filters  cmake_install.cmake  drawable.cpp  drawable.h  graphics_handler.cpp  graphics_handler.h
graphics/drawables/: CMakeLists.txt  Graph.vcxproj  Graph.vcxproj.filters  InfoList.vcxproj  InfoList.vcxproj.filters  Text.vcxproj  Text.vcxproj.filters  cmake_install.cmake  graph.cpp  graph.h  info_list.cpp  info_list.h  text.cpp  text.h
gym/: CMakeLists.txt  LethalGym.vcxproj  LethalGym.vcxproj.filters  cmake_install.cmake  lethal_gym.cpp  lethal_gym.h
helpers/: CMakeLists.txt  CodeInjector.vcxproj  CodeInjector.vcxproj.filters  Logger.vcxproj  Logger.vcxproj.filters  Math.vcxproj  Math.vcxproj.filters  cmake_install.cmake  code_injector.cpp  code_injector.h  compile_commands.json  logger.cpp  logger.h  math_helpers.cpp  math_helpers.h
helpers/distributions/: CMakeLists.txt  Categorical.vcxproj  Categorical.vcxproj.filters  Distribution.vcxproj  Distribution.vcxproj.filters  categorical.cpp  categorical.h  cmake_install.cmake  distribution.cpp  distribution.h
rl/: ActionTranslator.vcxproj  ActionTranslator.vcxproj.filters  CMakeLists.txt  DqnAgent.vcxproj  DqnAgent.vcxproj.filters  MainDqn.vcxproj  MainDqn.vcxproj.filters  MultiAgent.vcxproj  MultiAgent.vcxproj.filters  action_translator.cpp  action_translator.h  agent.h  cmake_install.cmake  delete_dueling_dqn.cpp  delete_dueling_dqn.h  dqn_agent.cpp  dqn_agent.h  main_dqn.cpp  main_dqn.h  multi_agent.cpp  multi_agent.h
rl/agents/: ActorCritic.vcxproj  ActorCritic.vcxproj.filters  CMakeLists.txt  DuelingDqn.vcxproj  DuelingDqn.vcxproj.filters  ReplayBuffer.vcxproj  ReplayBuffer.vcxproj.filters  actor_critic.cpp  actor_critic.h  cmake_install.cmake  dueling_dqn.cpp  dueling_dqn.h  replay_buffer.cpp  replay_buffer.h  soft_actor_critic.cpp  soft_actor_critic.h
